// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getContainerId should work 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Executing shell script: docker-compose -f mock/docker-compose.dockest-generated.yml ps -q \\"redis\\"",
    ],
    Array [
      "Successfully executed shell script docker-compose -f mock/docker-compose.dockest-generated.yml ps -q \\"redis\\"",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`getContainerId should work 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "docker-compose -f mock/docker-compose.dockest-generated.yml ps -q \\"redis\\"",
      Object {
        "shell": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "stdout": "getContainerId 🌮",
      },
    },
  ],
}
`;

exports[`getContainerId should work 3`] = `"getContainerId 🌮"`;
